# ESP32_S3-WebServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/include/: main.h  server_certs.h
main/lib/SSD1306/: SSD1306.cpp  SSD1306.h
main/lib/certs/: cacert.pem  prvtkey.pem
main/lib/counter/: LICENSE  README.md  counter.cpp  counter.h  keywords.txt  library.properties
main/lib/counter/examples/BasicCount/: BasicCount.ino
main/lib/counter/examples/FlagManagement/: FlagManagement.ino
main/lib/counter/examples/TimerExample/: TimerExample.ino
main/lib/pinManagement/: pinManagement.cpp  pinManagement.h
